changed the name of the component 'RegisterModal' to 'ExampleAdd' and now the component only shows when user clicks on the button 'example add'; fixed the center alignment in header and footer; added some links like font awesome to public/index.html, so that social media links work in the footer

--- a/client/src/footer.css
+++ b/client/src/footer.css
@@ -1,22 +1,25 @@
 .footer {
-    background-color: #001040;
-    padding-left: 200px;
-    height: 60px;
+  background-color: #001040;
+  height: 60px;
 }
 
 .footer__center-div {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
 }
 
 .footer__container {
-    height: inherit;
+  height: inherit;
 }
 
 .footer__text {
-    font-size: 20px;
-    color: #00BF30!important;
+  font-size: 20px;
+  color: #00BF30!important;
+  margin-left: 10px;
+  margin-top:inherit;
+  margin-bottom:inherit;
 }
 
 .footer__social-media {
