--- a/client/src/header.css
+++ b/client/src/header.css
@@ -1,26 +1,29 @@
 .header {
-    background-color: #001040;
-    padding-left: 200px;
-    height: 60px;
+  background-color: #001040;
+  height: 60px;
 }
 
 .header__icon {
-    height: 50px;
-    width: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 .header__center-div {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 100%;
 }
 
 .header__container {
-    height: inherit;
+  height: inherit;
 }
 
 .header__text {
-    font-size: 20px;
-    color: #00BF30!important;
-    margin-left: 70px;
+  font-size: 20px;
+  color: #00BF30!important;
+  margin-left: 10px;
+  margin-top:inherit;
+  margin-bottom:inherit;
 }
